[package]
edition = "2024"
name = "must-gw"
version = "0.1.0"

[dependencies]
rppal = "0.22.1"
env_logger = "0.11.9"
loragw = { path = "../loragw" }
libloragw-sys = { path = "../libloragw-sys" }
# must-hop = { path = "../must-hop" }
must-hop = { path = "../must-hop", default-features = false, features = [
  "in_std",
] }
postcard = "1.1.3"
heapless = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }
