[package]
name = "must-hop"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]

defmt = "1.0.1"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", default-features = false, features = [
  "defmt",
  "use-defmt",
] }
heapless = { version = "0.9.2", features = ["serde", "defmt"] }
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", features = [
  "defmt-03",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = { version = "0", features = ["defmt"] }

tokio = { version = "1.49.0", features = ["rt", "macros"], optional = true }

[features]
default = []
in_std = ["tokio", "embassy-time/std", "defmt/encoding-rzcobs", "serde/std"]
