[package]
name = "must-hop"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]

defmt = "1.0.1"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", default-features = false, features = [] }
heapless = { version = "0.9.2", features = ["serde"] }
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", features = [] }
embassy-time = { version = "0.5.0", features = [] }
embassy-sync = { version = "0.7.2" }
embassy-futures = { version = "0" }

log = { version = "0.4.29", optional = true }
tokio = { version = "1.49.0", features = ["rt", "macros"], optional = true }

[features]
default = [
  "postcard/defmt",
  "postcard/use-defmt",
  "heapless/defmt",
  "lora-phy/defmt-03",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embassy-sync/defmt",
  "embassy-futures/defmt",
]
in_std = ["tokio", "log", "embassy-time/std", "serde/std"]
