[package]
edition = "2024"
name = "must-gateway-sx1302-example"
version = "0.1.0"

[dependencies]
rppal = "0.14"
env_logger = "0.10"
loragw = { path = "../../../loragw" }
libloragw-sys = { path = "../../../libloragw-sys" }
must-hop = { path = "../../../must-hop" }
postcard = "1.1.3"
heapless = "0.9.2"
